src/objects/servicerequest__c.object
<CustomObject>
    <fields>
        <fullName>CloseTime__c</fullName>
        <formula>IF( TEXT(state__c)=&apos;关闭&apos; , NOW() , null)</formula>
        <label>关闭时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>设备序列号</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>设备必须属于客户</errorMessage>
            <filterItems>
                <field>Equipment__c.customer__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>服务请求</relationshipLabel>
        <relationshipName>sBwg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipmentname__c</fullName>
        <formula>Equipment__r.Equipmentname__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentunittype__c</fullName>
        <formula>Equipment__r.Equipmentunittype__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>指派技术专家</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>陈宝林</fullName>
                </value>
                <value>
                    <fullName>邱海英</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <description>最终解决方案</description>
        <label>最终解决方案</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <description>最终完成时间</description>
        <label>完成日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_customer__c</fullName>
        <label>客户所属集团</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallreportCloseNum__c</fullName>
        <label>#安装报告关闭数量</label>
        <summaryFilterItems>
            <field>installreport__c.state__c</field>
            <operation>equals</operation>
            <value>已完成</value>
        </summaryFilterItems>
        <summaryForeignKey>installreport__c.servicereport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InstallreportNum__c</fullName>
        <label>#安装报告数量</label>
        <summaryForeignKey>installreport__c.servicereport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OwnEmail__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>#所有人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomreportCloseNum__c</fullName>
        <label>#手术室评估报告关闭状态数量</label>
        <summaryFilterItems>
            <field>roomreport__c.state__c</field>
            <operation>equals</operation>
            <value>关闭</value>
        </summaryFilterItems>
        <summaryForeignKey>roomreport__c.service__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RoomreportNum__c</fullName>
        <label>#手术室评估报告数量</label>
        <summaryForeignKey>roomreport__c.service__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SecondEmail__c</fullName>
        <formula>secondperson__r.Email</formula>
        <label>#第二责任人邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicereportCloseNum__c</fullName>
        <label>#技术服务报告关闭数量</label>
        <summaryFilterItems>
            <field>servicereport__c.state__c</field>
            <operation>equals</operation>
            <value>关闭</value>
        </summaryFilterItems>
        <summaryForeignKey>servicereport__c.servicerequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ServicereportNum__c</fullName>
        <label>#技术服务报告数量</label>
        <summaryForeignKey>servicereport__c.servicerequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <formula>customer__r.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approvestate__c</fullName>
        <label>出差审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                </value>
                <value>
                    <fullName>审批中</fullName>
                    <default>true</default>
                    <label>审批中</label>
                </value>
                <value>
                    <fullName>审批结束</fullName>
                </value>
                <value>
                    <fullName>拒绝</fullName>
                </value>
                <value>
                    <fullName>调回</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <formula>TEXT(customer__r.area__c)</formula>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bjsqzje__c</fullName>
        <label>备件申请总金额</label>
        <summarizedField>sparepart__c.sqtotleprice__c</summarizedField>
        <summaryForeignKey>sparepart__c.servicerequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>close_time_2__c</fullName>
        <label>关闭时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>服务请求</relationshipLabel>
        <relationshipName>FtY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>TEXT(person__r.department__c)</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>departure__c</fullName>
        <label>出发地</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>departuredate__c</fullName>
        <label>出发时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>destination__c</fullName>
        <label>目的地</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isupgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否升级</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jingliyijian__c</fullName>
        <label>经理指导意见</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jsfwzje__c</fullName>
        <label>技术服务总金额</label>
        <summarizedField>servicereport__c.Field7__c</summarizedField>
        <summaryForeignKey>servicereport__c.servicerequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <formula>person__r.landline__c</formula>
        <label>座机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.customer__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>服务请求</relationshipLabel>
        <relationshipName>oll6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <formula>person__r.MobilePhone</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <formula>customer__r.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qiwangjiejueshijian__c</fullName>
        <label>期望解决时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>requesttime__c</fullName>
        <label>请求时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>returntime__c</fullName>
        <label>返回时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>secondperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>第二责任人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBhx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>solution__c</fullName>
        <label>升级后解决方案</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>case状态</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>未响应</fullName>
                </value>
                <value>
                    <fullName>已响应</fullName>
                    <default>true</default>
                    <label>已响应</label>
                </value>
                <value>
                    <fullName>服务中</fullName>
                </value>
                <value>
                    <fullName>等待备件</fullName>
                </value>
                <value>
                    <fullName>未解决，观察中</fullName>
                </value>
                <value>
                    <fullName>已解决，继续观察</fullName>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
                <value>
                    <fullName>安装调试中</fullName>
                </value>
                <value>
                    <fullName>已安装，未调试</fullName>
                </value>
                <value>
                    <fullName>已安装，等待PMMA测试结果</fullName>
                </value>
                <value>
                    <fullName>已安装，PMMA未通过</fullName>
                </value>
                <value>
                    <fullName>关闭（PMMA通过）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>totlejzje__c</fullName>
        <formula>Field15__c  +  jsfwzje__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总体价值金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zhuanjiayijian__c</fullName>
        <label>技术专家意见</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zhuguanyijian__c</fullName>
        <label>主管指导意见</label>
        <type>TextArea</type>
    </fields>
    <label>服务请求</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>state__c</columns>
        <columns>customer__c</columns>
        <columns>Equipmentunittype__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>isupgrade__c</columns>
        <columns>person__c</columns>
        <columns>address__c</columns>
        <columns>department__c</columns>
        <columns>phone__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>X021302_servicerequest</fullName>
        <filterScope>Queue</filterScope>
        <label>021302-鲁豫区技术负责人</label>
        <queue>X021302</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>请求名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>服务请求</pluralLabel>
    <recordTypes>
        <fullName>GZBX</fullName>
        <active>true</active>
        <description>用于记录故障报修类型的服务请求</description>
        <label>故障报修</label>
    </recordTypes>
    <recordTypes>
        <fullName>Newyjaz</fullName>
        <active>true</active>
        <description>用于记录样机安装类型的服务请求</description>
        <label>样机安装</label>
    </recordTypes>
    <recordTypes>
        <fullName>Newyjcj</fullName>
        <active>true</active>
        <description>用于记录样机撤机类型的服务请求</description>
        <label>样机撤机</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>用于记录巡检类型的服务请求</description>
        <label>巡检</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJ</fullName>
        <active>true</active>
        <description>用于记录升级类型的服务请求</description>
        <label>升级</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_support</fullName>
        <active>true</active>
        <description>用于记录非常规设备维护的技术服务</description>
        <label>技术服务支持</label>
    </recordTypes>
    <recordTypes>
        <fullName>With_the_operation</fullName>
        <active>true</active>
        <label>跟手术</label>
    </recordTypes>
    <recordTypes>
        <fullName>baoyang</fullName>
        <active>true</active>
        <description>用于记录年度/季度保养的服务请求</description>
        <label>年季度保养</label>
    </recordTypes>
    <recordTypes>
        <fullName>environmentevaluation</fullName>
        <active>true</active>
        <description>用于记录手术室环境评估的服务请求</description>
        <label>手术室环境评估</label>
    </recordTypes>
    <recordTypes>
        <fullName>gas_change</fullName>
        <active>true</active>
        <description>用于描述更换气瓶的服务请求</description>
        <label>更换气瓶</label>
    </recordTypes>
    <recordTypes>
        <fullName>htaz</fullName>
        <active>true</active>
        <description>用于记录合同新机安装类型的服务请求</description>
        <label>合同安装</label>
    </recordTypes>
    <recordTypes>
        <fullName>presalesupport</fullName>
        <active>true</active>
        <description>用于记录售前支持的服务请求</description>
        <label>售前支持</label>
    </recordTypes>
    <recordTypes>
        <fullName>reyjaz</fullName>
        <active>true</active>
        <description>用于记录移机安装类型的服务请求</description>
        <label>移机安装</label>
    </recordTypes>
    <recordTypes>
        <fullName>yangji</fullName>
        <active>false</active>
        <description>用于记录备用机服务工作的服务请求</description>
        <label>备用机服务工作</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
    </sharingReasons>
    <validationRules>
        <fullName>Equipment_State_Check</fullName>
        <active>true</active>
        <description>对象设备的字段使用状态为停用、报废、退换货时不能建立服务请求</description>
        <errorConditionFormula>TEXT(Equipment__r.Field1__c) =&apos;退换货&apos; || TEXT(Equipment__r.Field1__c) =&apos;报废&apos; || TEXT(Equipment__r.Field1__c) =&apos;停用&apos;</errorConditionFormula>
        <errorMessage>设备的使用状态为停用、报废、退换货时不能建立服务请求</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_request_stage_close2</fullName>
        <active>true</active>
        <description>服务请求下，技术服务报告、安装验收单、手术室环境报告至少有一项，服务请求才可以关闭。</description>
        <errorConditionFormula>TEXT( state__c )=&apos;关闭&apos; &amp;&amp;   ( InstallreportCloseNum__c  =  0 &amp;&amp;   ServicereportCloseNum__c =  0 &amp;&amp;   RoomreportCloseNum__c  =  0)</errorConditionFormula>
        <errorMessage>技术服务报告、安装确认单、手术室环境报告至少填写一项，服务请求才可以关闭。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ServicerequestStageClose</fullName>
        <active>true</active>
        <description>若服务请求下添加手术室评估报告、安装报告、技术服务报告时，各子记录信息状态为关闭时，此服务请求状态可以关闭</description>
        <errorConditionFormula>TEXT( state__c )=&apos;关闭&apos; &amp;&amp;   NOT( InstallreportCloseNum__c  =  InstallreportNum__c  &amp;&amp;   ServicereportCloseNum__c =  ServicereportNum__c   &amp;&amp;   RoomreportCloseNum__c  =  RoomreportNum__c )</errorConditionFormula>
        <errorMessage>服务请求下的手术室评估报告、安装确认单、技术服务报告记录信息未全部关闭或完成，此服务请求状态不可以关闭</errorMessage>
    </validationRules>
</CustomObject>